add gamesData route
